--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,10 @@ VARIABLES
   --black-color: #0b0c10;
   /*Blue*/
   --dark-blue-color: #1f2833;
-  /*Gray*/
-  --gray-color: #c5c6c7;
+  /*Lightgray*/
+  --lightgray-color: #c5c6c7;
+  /*Gray */
+  --gray-color: #8f8f8f;
   /*Lightblue*/
   --lightblue-color: #66fcf1;
   /*Ocean*/
@@ -49,7 +51,7 @@ nav {
   right: 0;
   position: fixed;
   background: inherit;
-
+  z-index: 1;
   height: 105px;
   display: flex;
   justify-content: center;
@@ -83,6 +85,108 @@ nav a.active {
 
 h1 {
   font-size: 5.5rem;
+}
+
+.title {
+  position: relative;
+  display: inline-block;
+  width: max-content;
+}
+
+.title::after {
+  content: '';
+  background: var(--ocean-color);
+  height: 6.5rem;
+  width: 0;
+  position: absolute;
+  z-index: -1;
+  transition: all 0.5s;
+  right: 0;
+}
+
+.title.highlight::after {
+  width: 100%;
+}
+
+.description {
+  margin-top: 2rem;
+  width: max-content;
+}
+
+#desc-1 {
+  overflow: hidden;
+  white-space: nowrap;
+  animation: typing 3s steps(80, end);
+}
+
+#desc-2 {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 0;
+  animation: typing 3s steps(80, end);
+  animation-delay: 2.5s;
+  animation-fill-mode: forwards;
+}
+
+#desc-3 {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 0;
+  animation: typing 3s steps(80, end);
+  animation-delay: 5s;
+  animation-fill-mode: forwards;
+}
+
+#desc-4 {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 0;
+  animation: typing 3s steps(80, end);
+  animation-delay: 7.5s;
+  animation-fill-mode: forwards;
+}
+
+#proj-1,
+#proj-2,
+#proj-3,
+#proj-4 {
+  overflow: hidden;
+  white-space: nowrap;
+  animation: typing 3s steps(80, end);
+}
+
+#cont-1 {
+  overflow: hidden;
+  white-space: nowrap;
+  animation: typing 3s steps(80, end);
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+.underline::after {
+  content: '';
+  background: var(--ocean-color);
+  width: 100%;
+  height: 0.8rem;
+  position: absolute;
+  bottom: -0.1rem;
+  left: 0;
+  z-index: -1;
+  border-radius: 1px;
+}
+
+.underline {
+  position: relative;
+  display: inline-block;
+  width: max-content;
+  font-size: 2.5rem;
 }
 
 h2 {
